# sodecl

./: .codecov.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  doxyfile  get_code_cov.sh  odecl.cpp  sodecl.cpp
MatlabInterface/: callodecl.m  getresults.m  odecl.m
SampleModel/SampleModel/: odeclmatexe.cpp
benchmarks/: CMakeLists.txt  kuramoto.cl  kuramoto_benchmark.py  oculomotor.cl  oculomotor_benchmark.py
ci/: intelOpenCLSilent.cfg
cmake/: CompilerWarnings.cmake  ProjectDependences.cmake  ProjectDependencies.cmake  StandardProjectSettings.cmake
examples/: CMakeLists.txt  kuramoto_euler.py  kuramoto_euler_stochastic.py  kuramotobenchmarks.py  kuramotostoch.py  oculomotor.cl  oculomotor_euler.py  oculomotor_euler_stochastic.py  oculomotor_im.py  oculomotor_rk.py
examples/cxx/: CMakeLists.txt  oculomotor.cl  oculomotor_euler.cpp
examples/python/: CMakeLists.txt  oculomotor_euler_stochastic.py  oculomotor_ie.py
include/: build_Option.hpp  clog.hpp  device.hpp  device_Type.hpp  output_Type.hpp  platform.hpp  sodecl.hpp  sodeclmgr.hpp  solver_Type.hpp  timer.hpp
interfaces/: CMakeLists.txt  sodecl.cpp  sodecl.i
interfaces/matlab/: sodecl.m
interfaces/python/: CMakeLists.txt  sodecl.cpp  sodecl.py
matlabscripts/: getresults.m  sodecl.m
odecl/: odecl.hpp
odecl/kernels/: euler.cl  im.cl  params.cl  rk4.cl  solver_caller.cl  stochastic_solver_caller.cl
odecl/odecl/: build_Option.hpp  cl.hpp  clog.hpp  device.hpp  device_Type.hpp  kernels.hpp  output_Type.hpp  platform.hpp  solver_Type.hpp  system.hpp  timer.hpp
pythonscripts/: kuramoto.cl  kuramotostoch.py  oculomotordeterm.py  oculomotorstoch.py  sodecl.py
scripts/: slurm_submit.peta4-knl  slurm_submit.wilkes2
sodecl/: sodecl.hpp
sodecl/kernels/: ie.cl  im.cl  solver_caller.cl  stochastic_solver_caller.cl  stochasticeuler.cl
sodecl/sodecl/: build_Option.hpp  cl.hpp  clog.hpp  device.hpp  kernels.hpp  output_Type.hpp  platform.hpp  sodeclmgr.hpp  system.hpp  timer.hpp
sodeclexe/: sodeclexe.sln
sodeclexe/sodeclexe/: sodeclexe.vcxproj  sodeclexe.vcxproj.filters
src/: CMakeLists.txt  clog.cpp  device.cpp  platform.cpp  sodecl.cpp  sodecl.hpp  sodeclmgr.cpp  timer.cpp
src/include/Random123/: MicroURNG.hpp  threefry.h
src/include/Random123/conventional/: Engine.hpp  gsl_cbrng.h
src/include/Random123/features/: clangfeatures.h  compilerfeatures.h  gccfeatures.h  iccfeatures.h  pgccfeatures.h  sse.h  xlcfeatures.h
src/kernels/: euler.cl  ie.cl  im.cl  rk4.cl  solver_caller.cl  stochastic_euler.cl  stochastic_solver_caller.cl
src/matlabscripts/: sodecl.m
src/pythonscripts/: kuramoto.cl  kuramotobenchmarks.py  kuramotobenchmarks2.py  kuramotostoch.py  occulomotor.cl  oculomotor.cl  oculomotorstoch.py  slurm_submit.peta4-skylake  slurm_submit.wilkes2  sodecl.py  sodecl2.py
src/sodecl/: build_Option.hpp  clog.hpp  device.hpp  device_Type.hpp  kernels.hpp  opencl_mgr.hpp  output_Type.hpp  platform.hpp  sodecl.hpp  sodeclmgr.hpp  solver_Type.hpp  timer.hpp
src/sodecl/Random123/: aes.h  gsl_microrng.h  u01.h
src/sodecl/Random123/features/: llvmfeatures.h  msvcfeatures.h  nvccfeatures.h  openclfeatures.h  sunprofeatures.h
src/sodecl/kernels/: euler.cl  ie.cl  im.cl  random_numbers.cl  rk4.cl  solver_caller.cl  stochastic_euler.cl  stochastic_solver_caller.cl  stochasticeuler.cl
src/sodecl/sodecl/: build_Option.hpp  clog.hpp  device.hpp  device_Type.hpp  euler.hpp  kernels.hpp  opencl_mgr.hpp  opencl_source_interface.hpp  opencl_source_mgr.hpp  opencl_source_stochastic_euler.hpp  opencl_source_stochastic_noise.hpp  output_Type.hpp  platform.hpp  sodeclmgr.hpp  solver_Type.hpp  solver_interface.hpp  solver_mgr.hpp  stochastic_euler.hpp  timer.hpp
src/tests/: kuramoto.cl  opencl_kernel_strings_test.hpp  opencl_tests.hpp  sodecl_python_tests.py  sodecl_solvers_tests.hpp  sodecl_tests.cpp
tests/: CMakeLists.txt  kuramoto.cl  sodecl_python_tests.py  sodecl_tests.cpp
tests/approval/: CMakeLists.txt
tests/data/: CMakeLists.txt  oculomotor_euler.pkl  oculomotor_ie.pkl  oculomotor_im.pkl  oculomotor_rk.pkl
tests/unit/: CMakeLists.txt  sodecl_tests.cpp
travisci/: intelOpenCLSilent.cfg
